Added GLFW and can now create a window

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Rogue/vendor/spdlog"]
 	path = Rogue/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Rogue/vendor/GLFW"]
+	path = Rogue/vendor/GLFW
+	url = https://github.com/mmckee003/glfw
